Implement category validation and improve article creation logic
- Updated  to include validation for duplicate categories.
- Enhanced the  method to ensure category uniqueness based on IDs.
- Added unit test to verify that an exception is thrown when duplicate categories are present.
- Cleaned up code to comply with SonarLint recommendations for better readability and maintainability.
- Ensured that article creation enforces integrity and immutability constraints.